# tf_static_aggregator

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: TfStaticAggregator.py
src/tf_static_aggregator/: aggregator.py
