<?xml version="1.0"?>
<package format="2">
  <name>tf_static_aggregator</name>
  <version>0.0.0</version>
  <description>tf_static_aggregator</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">beuzeboc</maintainer>


  <license>BSD</license>

  <build_depend>catkin</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
